--- a/superhero.html
+++ b/superhero.html
@@ -2,15 +2,49 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Template</title>
-        <!---Someday I will use CSS
+        <title>Favorite Superheroes</title>
         <style>
-            
-        </style>    
-        -->
+
+        </style>
     </head>
     <body>
-        <h1>Page Title</h1>
-        <p>Paragraph text</p>
+        <table>
+            <caption>Favorite Superheroes</caption>
+            <tr>
+                <th>Name</th>
+                <th>Alias</th>
+                <th>Image</th>
+                <th>Superpower</th>
+                <th>Weakness</th>
+            </tr>
+            <tr>
+                <th>Kirishima Eijiro</th>
+                <td>Red Riot</td>
+                <td>Image</td>
+                <td>Hardening: It allows Eijiro the power to harden and sharpen any or all parts of his body, causing his flesh to become jagged and rock-like.</td>
+                <td>He can only take so much damage before his power wears off, for example his hardening can crack and fall off.</td>
+            </tr>
+            <tr>
+                <th>Damian Wayne</th>
+                <td>Robin</td>
+                <td>Image</td>
+                <td>No known superhuman powers, but is an expert martial artist and intellect in science</td>
+                <td>Possesses all the weaknesses of a normal human male as he has no supernatural powers</td>
+            </tr>
+            <tr>
+                <th>Shota Aizawa</th>
+                <td>Eraser Head</td>
+                <td>Image</td>
+                <td>Erasure: It allows him to nullify others' control over their powers by making eye contact with them.</td>
+                <td>Blinking dispels the effect of his power and using it gives him very dry eyes.</td>
+            </tr>
+            <tr>
+                <th>Lucy Heartfilia</th>
+                <td>N/A</td>
+                <td>Image</td>
+                <td>Celestial Spirit Mage: Her powers come from magical keys that summon celestial spirits to aid her and enhance her abilities.</td>
+                <td>Without her celestial keys she is a weak hero, with little strength to offer.</td>
+            </tr>
+        </table>
     </body>
 </html>
