--- a/superhero.html
+++ b/superhero.html
@@ -20,7 +20,7 @@
             <tr>
                 <th>Kirishima Eijiro</th>
                 <td>Red Riot</td>
-                <td>Image</td>
+                <td><img src="kirishima.jpg" alt="Red Riot" height="100px"></td>
                 <td>Hardening: It allows Eijiro the power to harden and sharpen any or all parts of his body, causing his flesh to become jagged and rock-like.</td>
                 <td>He can only take so much damage before his power wears off, for example his hardening can crack and fall off.</td>
             </tr>
