--- a/superhero.html
+++ b/superhero.html
@@ -27,7 +27,7 @@
             <tr>
                 <th>Damian Wayne</th>
                 <td>Robin</td>
-                <td>Image</td>
+                <td><img src="damian.jpg" alt="Robin" height="100px"></td>
                 <td>No known superhuman powers, but is an expert martial artist and intellect in science</td>
                 <td>Possesses all the weaknesses of a normal human male as he has no supernatural powers</td>
             </tr>
