--- a/superhero.html
+++ b/superhero.html
@@ -20,14 +20,14 @@
             <tr>
                 <th>Kirishima Eijiro</th>
                 <td>Red Riot</td>
-                <td><img src="kirishima.jpg" alt="Red Riot" height="100px"></td>
+                <td><a href="https://i.pinimg.com/564x/e6/54/1b/e6541b662982ca0ced267fea1f667a4d.jpg">Pinterest<img src="images/kirishima.jpg" alt="Red Riot" height="100px"></a></td>
                 <td>Hardening: It allows Eijiro the power to harden and sharpen any or all parts of his body, causing his flesh to become jagged and rock-like.</td>
                 <td>He can only take so much damage before his power wears off, for example his hardening can crack and fall off.</td>
             </tr>
             <tr>
                 <th>Damian Wayne</th>
                 <td>Robin</td>
-                <td><img src="damian.jpg" alt="Robin" height="100px"></td>
+                <td><img src="images/damian.jpg" alt="Robin" height="100px" width="100px"></td>
                 <td>No known superhuman powers, but is an expert martial artist and intellect in science</td>
                 <td>Possesses all the weaknesses of a normal human male as he has no supernatural powers</td>
             </tr>
