--- a/superhero.html
+++ b/superhero.html
@@ -4,45 +4,64 @@
         <meta charset="UTF-8">
         <title>Favorite Superheroes</title>
         <style>
-
+            body{
+                font-family: 'Courier New', Courier, monospace;
+                color: darkred;
+                line-height: 17px;
+                text-align: center;
+                padding: 3px
+            }
+            table{
+                border: 3px dashed darkred
+            }
+            td{
+                padding: 5px
+            }
+            span{
+                border-color: darkred;
+                border-bottom: 2px solid darkred;
+            }
+            #c1{
+                border-right: 2px dashed darkred;
+            }
         </style>
     </head>
     <body>
         <table>
             <caption>Favorite Superheroes</caption>
             <tr>
-                <th>Name</th>
+                <th id="c1">Name</th>
                 <th>Alias</th>
                 <th>Image</th>
                 <th>Superpower</th>
                 <th>Weakness</th>
             </tr>
             <tr>
-                <th>Kirishima Eijiro</th>
+                <th id="c1">Kirishima Eijiro</th>
                 <td>Red Riot</td>
-                <td><a href="https://i.pinimg.com/564x/e6/54/1b/e6541b662982ca0ced267fea1f667a4d.jpg">Pinterest<img src="images/kirishima.jpg" alt="Red Riot" height="100px" width="auto"></a></td>
-                <td>Hardening: It allows Eijiro the power to harden and sharpen any or all parts of his body, causing his flesh to become jagged and rock-like.</td>
+                <td><a href="https://i.pinimg.com/564x/e6/54/1b/e6541b662982ca0ced267fea1f667a4d.jpg">Pinterest<img src="images/kirishima.jpg" alt="Red Riot" height="100px"></a></td>
+                <td><strong><span>Hardening:</span></strong> It allows Eijiro the power to harden and sharpen any or all parts of his body, causing his flesh to become jagged and rock-like.</td>
                 <td>He can only take so much damage before his power wears off, for example his hardening can crack and fall off.</td>
             </tr>
             <tr>
-                <th>Damian Wayne</th>
+                <th id="c1">Damian Wayne</th>
                 <td>Robin</td>
-                <td><a href="https://i.pinimg.com/564x/4f/51/3b/4f513b819ca5f6bf7ed9b3aeb10659db.jpg">Pinterest<img src="images/damian.jpg" alt="Robin" height="100px" width="100px" width="auto"></a></td>
+                <td><a href="https://i.pinimg.com/564x/4f/51/3b/4f513b819ca5f6bf7ed9b3aeb10659db.jpg">Pinterest<img src="images/damian.jpg" alt="Robin" height="100px"></a></td>
                 <td>No known superhuman powers, but is an expert martial artist and intellect in science</td>
                 <td>Possesses all the weaknesses of a normal human male as he has no supernatural powers</td>
             </tr>
             <tr>
-                <th>Shota Aizawa</th>
+                <th id="c1">Shota Aizawa</th>
                 <td>Eraser Head</td>
-                <td><a href="https://i.pinimg.com/564x/bd/78/9c/bd789c92b9fd885944679ee1607a6cdd.jpg">Pinterest<img src="images/aizawa.jpg" alt= "Eraser Head" height="100 px" width="auto"></a></td>
-                <td>Erasure: It allows him to nullify others' control over their powers by making eye contact with them.</td>
+                <td><a href="https://i.pinimg.com/564x/bd/78/9c/bd789c92b9fd885944679ee1607a6cdd.jpg">Pinterest<img src="images/aizawa.jpg" alt= "Eraser Head" height="100 px"></a></td>
+                <td><strong><span>Erasure:</span></strong> It allows him to nullify others' control over their powers by making eye contact with them.</td>
                 <td>Blinking dispels the effect of his power and using it gives him very dry eyes.</td>
             </tr>
             <tr>
-                <th>Lucy Heartfilia</th>
+                <th id="c1">Lucy Heartfilia</th>
                 <td>N/A</td>
-                <td><a href="https://i.pinimg.com/564x/04/71/48/0471481b0ce9ef4987ed774a5aa2efd8.jpg">Pinterest<img src="images/lucy.jpg" alt="Lucy Heartfilia" height="100px" width="auto"></a></td>
-                <td>Celestial Spirit Mage: Her powers come from magical keys that summon celestial spirits to aid her and enhance her abilities.</td>
+                <td><a href="https://i.pinimg.com/564x/04/71/48/0471481b0ce9ef4987ed774a5aa2efd8.jpg">Pinterest<img src="images/lucy.jpg" alt="Lucy Heartfilia" height="100px"></a></td>
+                <td><strong><span>Celestial Spirit Mage:</span></strong> Her powers come from magical keys that summon celestial spirits to aid her and enhance her abilities.</td>
                 <td>Without her celestial keys she is a weak hero, with little strength to offer.</td>
             </tr>
         </table>
