--- a/superhero.html
+++ b/superhero.html
@@ -9,10 +9,14 @@
                 color: darkred;
                 line-height: 17px;
                 text-align: center;
-                padding: 3px
+                padding: 3px;
             }
             table{
-                border: 3px dashed darkred
+                border: 3px dashed darkred;
+            }
+            th{
+                font-size: larger;
+
             }
             td{
                 padding: 5px
