--- a/superhero.html
+++ b/superhero.html
@@ -32,7 +32,7 @@
     </head>
     <body>
         <table>
-            <caption>Favorite Superheroes</caption>
+            <caption style="font-size:16px"><strong>Favorite Superheroes</strong></caption>
             <tr>
                 <th id="c1">Name</th>
                 <th>Alias</th>
