--- a/superhero.html
+++ b/superhero.html
@@ -19,7 +19,7 @@
 
             }
             td{
-                padding: 5px
+                padding: 5px;
             }
             span{
                 border-color: darkred;
