--- a/superhero.html
+++ b/superhero.html
@@ -11,6 +11,9 @@
                 text-align: center;
                 padding: 3px;
             }
+            h1{
+                border-bottom:3px solid darkred;
+            }
             table{
                 border: 3px dashed darkred;
             }
@@ -31,8 +34,8 @@
         </style>
     </head>
     <body>
+        <h1><strong>Favorite Superheroes!</strong></h1><br><br>
         <table>
-            <caption style="font-size:24px"><strong>Favorite Superheroes</strong></caption><br><br>
             <tr>
                 <th class="c1">Name</th>
                 <th>Alias</th>
