--- a/superhero.html
+++ b/superhero.html
@@ -10,9 +10,10 @@
                 line-height: 17px;
                 text-align: center;
                 padding: 3px;
+                background-color: rgb(236, 224, 213);
             }
             h1{
-                border-bottom:3px solid darkred;
+                border-bottom:2px solid darkred;
             }
             table{
                 border: 3px dashed darkred;
