--- a/superhero.html
+++ b/superhero.html
@@ -72,6 +72,7 @@
                 <td><strong><span>Celestial Spirit Mage:</span></strong> Her powers come from magical keys that summon celestial spirits to aid her and enhance her abilities.</td>
                 <td>Without her celestial keys she is a weak hero, with little strength to offer.</td>
             </tr>
-        </table>
+        </table><br><br>
+        <p><a href="index.html"><img src="https://cdn-icons-png.flaticon.com/512/6490/6490332.png" alt="Home Page" width="25"></a></p>
     </body>
 </html>
