--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       <li><a href="BACS200.html"><strong>BACS200</strong></a>: A page showcasing the work I have in class; participation.</li>
       <li><a href="educate.html"><strong>Educate</strong></a>: A page of inspirational and educational Ted Talks!</li>
       <li><a href="inspire.html"><strong>Inspire</strong></a>: A page dedicated to someone who inspires my work.</li>
-      <li><a href="profile.html"><strong>Profile</strong></a>:An introduction of me and my special interest!</li>
+      <li><a href="profile.html"><strong>Profile</strong></a>: An introduction of me and my special interest!</li>
+      <li><a href="superhero.html"><strong>Superheroes</strong></a>: A page dedicated to my favorite superheroes!</li>
     </ol>
     <img src="images/UNCOLogo.png" alt="UNCO Bear Logo">
   </body>
