--- a/superhero.html
+++ b/superhero.html
@@ -33,6 +33,7 @@
     <body>
         <table>
             <caption>Favorite Superheroes</caption>
+            <thead>
             <tr>
                 <th id="c1">Name</th>
                 <th>Alias</th>
@@ -40,6 +41,8 @@
                 <th>Superpower</th>
                 <th>Weakness</th>
             </tr>
+        </thead>
+        <tbody>
             <tr>
                 <th id="c1">Kirishima Eijiro</th>
                 <td>Red Riot</td>
@@ -68,6 +71,7 @@
                 <td><strong><span>Celestial Spirit Mage:</span></strong> Her powers come from magical keys that summon celestial spirits to aid her and enhance her abilities.</td>
                 <td>Without her celestial keys she is a weak hero, with little strength to offer.</td>
             </tr>
+        </tbody>
         </table>
     </body>
 </html>
