--- a/superhero.html
+++ b/superhero.html
@@ -20,7 +20,7 @@
             }
             th{
                 font-size: larger;
-
+                padding: 5px;
             }
             td{
                 padding: 5px;
