--- a/superhero.html
+++ b/superhero.html
@@ -7,6 +7,9 @@
             body{
                 text-align: center;
             }
+            .c1{
+                border-right: 2px dashed darkred;
+            }
         </style>
     </head>
     <body>
