--- a/superhero.html
+++ b/superhero.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Favorite Superheroes</title>
-        <link rel="stlyesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/main.css">
         <style>
             body{
                 text-align: center;
