--- a/BACS200.html
+++ b/BACS200.html
@@ -3,22 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>BACS200</title>
-<style>
-h1{
-  background-color:#d9a6b8;
-}
-h2 {
-  color: #d9a6b8;
-  }
-p{
-   font-family: sans-serif;
-   font-size: 12pt;
-  }
-img {
-      max-width: 50%;
-      max-height: 50%;
-    }
-</style>
+        <link rel="stylesheet" href="css/main.css">
+    <style>
+    img {
+          max-width: 50%;
+          max-height: 50%;
+        }
+    </style>
 <h1>Welcome to my <em>Practice</em> Page for Web Design.</h1>
 <p>This page is dedicated to the in class activities and practices. </p>
 <h2>My Interest & Inspiration</h2>
