--- a/superhero.html
+++ b/superhero.html
@@ -14,7 +14,7 @@
         </style>
     </head>
     <body>
-        <div><h1><strong>Favorite Superheroes!</strong></h1><br><br></div>
+        <div><h1><strong>Favorite Superheroes!</strong></h1></div><br><br>
         <table>
             <caption>Favorite Superheroes</caption>
             <thead>
