--- a/amuse.html
+++ b/amuse.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Amusing Websites</title>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <h1>Midly Amusing</h1>
