--- a/index.html
+++ b/index.html
@@ -3,28 +3,7 @@
 <head>
       <meta charset="UTF-8">
       <title>Index</title>
-  <style>
-  h1{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: midnightblue;
-  }
-  h2{
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color: cornflowerblue;
-  }
-  h3{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: cornflowerblue;
-  }
-  p{
-    font-family:'Times New Roman', Times, serif;
-    font-size: medium;
-  }
-  ol{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 11pt;
-  }
-  </style>
+      <link rel="stylesheet" href="css/main.css">
 </head>
   <body>
     <h1>Welcome!</h1>
