--- a/inspire.html
+++ b/inspire.html
@@ -3,20 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Inspire Me</title>
-<style>
-    h1{
-        background-color: #b1d6e1;
-        font-family: Georgia, 'Times New Roman', Times, serif;}
-    h2{
-        font-family: Georgia, 'Times New Roman', Times, serif;}
-    h3{
-        font-family: Georgia, 'Times New Roman', Times, serif;
-    }
-        p{
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        margin-right: 50px;
-    }
-</style>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <h1>Inspiration</h1>
