--- a/profile.html
+++ b/profile.html
@@ -3,19 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Profile</title>
-        <style>
-            h1{
-                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-                color: cornflowerblue;
-            }
-            h2{
-                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-                color: cornflowerblue;
-            }
-            p{
-                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            }
-        </style>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <h1>Personal Profile</h1>
