--- a/template.html
+++ b/template.html
@@ -3,11 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Template</title>
-        <!---Someday I will use CSS
-        <style>
-            
-        </style>    
-        -->
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <h1>Page Title</h1>
