--- a/test.html
+++ b/test.html
@@ -3,17 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Test</title>
-        <style>
-            thead{
-              background-color:lightblue;
-            }
-            td{
-              font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            }
-            .rheader{
-              color: rgb(82, 103, 110);
-            }
-        </style>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
       <h1>Testing Page</h1>
