--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Personal Profile</h1>
-        <h2>Payton Long, Graphic Deisgn Major with a minor in Digital Marketing</h2>
+        <h2>Payton Long, Graphic Deisgn Major with a minor in Digital Marketing!</h2>
         <img id="mainpic" src="images/PaytonLongImage.jpeg" alt="Picture of Me" height="300">
         <h2><u>Special Interest</u></h2>
         <ol type="I">
