--- a/BACS200.html
+++ b/BACS200.html
@@ -10,7 +10,7 @@
           max-height: 50%;
         }
     </style>
-<h1>Welcome to my <em>Practice</em> Page for Web Design.</h1>
+<div><h1>Welcome to my <em>Practice</em> Page for Web Design.</h1></div>
 <p>This page is dedicated to the in class activities and practices. </p>
 <h2>My Interest & Inspiration</h2>
 <img src="https://64.media.tumblr.com/54da838da596e03c9faff69bb5b3cd84/cc2d3e1893cf654b-60/s1280x1920/d7ea571e996882be2099d754984169301008578c.jpg" alt="Little Forest Fellow from the company Sanrio">
