--- a/amuse.html
+++ b/amuse.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1>Midly Amusing</h1>
+        <div><h1>Midly Amusing</h1></div>
         <h3>By Payton Long</h3>
         
         <h2>Pointer Pointer</h2>
