--- a/educate.html
+++ b/educate.html
@@ -3,19 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <title>Educate</title>
-    <style>
-            h1{
-                font-family: "Times New Roman", Times, serif;
-                color: #6495ED;
-            }
-            h3{
-                font-family: "Times New Roman", Times, serif;
-                color: #6495ED;
-            }
-            p{
-                font-family: "Times New Roman", Times, serif;
-            }
-    </style>
     </head>
     <body>
         <p> Links to Page Chapters
@@ -23,7 +10,7 @@
         <a href="#RSA">RSA Animate</a>
         </p><br><br>
         <section id=TedTalks>
-            <h1>Educational Ted Talks</h1>
+            <div><h1>Educational Ted Talks</h1></div>
             <p>On this page is a collection of a select few Ted Talks that I find inspirational and quite educational!</p><br>
             <h2>Give Yourself Permission to be Creative</h2>
             <h3>"That's when art's not a luxury, it's a sustenance. We need it."&nbsp;Ethan Hawke</h3>
@@ -36,7 +23,7 @@
         </section>
         
         <section id=RSA>
-            <h1>RSA Animate</h1>
+            <div><h1>RSA Animate</h1></div>
             <p>This section of the page is dedicated to animations done by various creators, each illustrating different topics of importance.</p><br>
             <h2>Left Brain, Right Brain</h2>
             <h3>"Now the last 50 years, [we are] living as part of an economically abundant, <strong>diverse</strong> communities in a fast changing global knowledge economy."</h3>
