--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="css/main.css">
 </head>
   <body>
-    <h1>Welcome!</h1>
+    <div><h1>Welcome!</h1></div>
     <h2>Index Page</h2>
     <p>This is my site for <strong>BACS200</strong>. Below you can see the links to other sites I have coded and designed!</p>
 
