--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1>Personal Profile</h1>
+        <div><h1>Personal Profile</h1></div>
         <h2>Payton Long, Graphic Deisgn Major with a minor in Digital Marketing!</h2>
         <img id="mainpic" src="images/PaytonLongImage.jpeg" alt="Picture of Me" height="300">
         <h2><u>Special Interest</u></h2>
