--- a/template.html
+++ b/template.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1>Page Title</h1>
+        <div><h1>Page Title</h1></div>
         <p>Paragraph text</p>
     </body>
 </html>
