--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-      <h1>Testing Page</h1>
+      <div><h1>Testing Page</h1></div>
       <table style="width:75%">
         <thead>
           <tr>
