--- a/educate.html
+++ b/educate.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Educate</title>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <p> Links to Page Chapters
