--- a/test.html
+++ b/test.html
@@ -60,6 +60,8 @@
       <form action="https://validator.w3.org/nu/" method="GET">
         <label for="docurl" style="font-size: 18px;">Page to Validate:</label>
         <input type="text" name="doc" id="docurl" placeholder="Please enter a valid URL">
+        <label for="show" style="font-size: 16px;">Show Source?</label>
+        <input type="checkbox" name="showsource" id="show">
         <input type="submit" value="GO">
       </form> 
     </body>
