--- a/search.html
+++ b/search.html
@@ -9,18 +9,9 @@
         <div><h1>Google Super Search!</h1></div>
         <p>Everyone loves Google, but why open a new tab/website when you could stay on the same page?</p>
         <fieldset style="border: 2px dashed darkred;">
-            <form action="https://www.google.com/search" method="GET">
-              <label for="query" style="font-size: 18px;">Super Search String:</label>
-              <input type="text" name="ask" id="query" placeholder="Enter your search query"><br><br>
-              
-              <label for="fun" style="font-size: 14px;">I'm feeling...</label>
-              <input type="checkbox" name="lucky" id="lucky">
-              <select id="fun" name="randomsite">
-                <option value="lucky">Lucky</option>
-                <option value="trendy">Trendy</option>
-                <option value="hungry">Hungry</option>
-                <option value="stellar">Stellar</option></options>
-              <input type="submit" value="GO">
+            <form action="https://www.google.com/search/" method="GET">
+              <label for="searchbox" style="font-size: 16px;">Super Search String:</label>
+              <input type="text" name="q" id="searchbox" placeholder="Enter your search query"><br><br>
             </form>
         </fieldset>
     </body>
