--- a/search.html
+++ b/search.html
@@ -11,7 +11,7 @@
         <fieldset style="border: 2px dashed darkred;">
             <form action="https://www.google.com/search/" method="GET">
               <label for="searchbox" style="font-size: 16px;">Super Search String:</label>
-              <input type="text" name="q" id="searchbox" placeholder="Enter your search query"><br><br>
+              <input type="text" name="as_q" id="searchbox" placeholder="Enter your search query"><br><br>
             </form>
         </fieldset>
     </body>
