--- a/search.html
+++ b/search.html
@@ -9,9 +9,9 @@
         <div><h1>Google Super Search!</h1></div>
         <p>Everyone loves Google, but why open a new tab/website when you could stay on the same page?</p>
         <fieldset style="border: 2px dashed darkred;">
-            <form action="https://www.google.com/search/" method="GET">
+            <form action="https://www.google.com/search" method="GET">
               <label for="searchbox" style="font-size: 16px;">Super Search String:</label>
-              <input type="text" name="as_q" id="searchbox" placeholder="Enter your search query"><br><br>
+              <input type="text" name="q" id="searchbox" placeholder="Enter your search query"><br><br>
             </form>
         </fieldset>
     </body>
