--- a/search.html
+++ b/search.html
@@ -8,11 +8,13 @@
     <body>
         <div><h1>Google Super Search!</h1></div>
         <p>Everyone loves Google, but why open a new tab/website when you could stay on the same page?</p>
+        
+        <form action="https://www.google.com/search" method="GET" target="_blank">
         <fieldset style="border: 2px dashed darkred;">
-            <form action="https://www.google.com/search" method="GET">
               <label for="searchbox" style="font-size: 16px;">Super Search String:</label>
               <input type="text" name="q" id="searchbox" placeholder="Enter your search query"><br><br>
             </form>
         </fieldset>
+
     </body>
 </html>
