--- a/search.html
+++ b/search.html
@@ -25,6 +25,9 @@
                         <option>None</option>
                     </select>
                 </div>
+                    <input type="checkbox" name="newwindow" value="1" id="checkwindow">
+                    <label for="checkwindow">Open Links in New Window?</label>
+                </div>
             </fieldset>
         </form>
     </body>
