--- a/search.html
+++ b/search.html
@@ -34,7 +34,9 @@
                     <div>
                         <label for="random">Random Search</label>
                         <select name="q" id="random">
-                            <option value="I%27m+Feeling+Curious">I'm Feeling Curious</option>
+                            <option value="I'm Feeling Curious">I'm Feeling Curious</option>
+                            <option value="I'm Feeling Hungry">I'm Feeling Hungry</option>
+                            <option value="flip a coin">I'm Feeling Adventurous</option>
                         </select>
                     </div>
                 </fieldset>
