--- a/search.html
+++ b/search.html
@@ -33,7 +33,7 @@
                     </div>
                     <div>
                         <label for="random">Random Search</label>
-                        <select name="q" id="random">
+                        <select name="as_q" id="random">
                             <option value="I'm Feeling Curious">I'm Feeling Curious</option>
                             <option value="I'm Feeling Hungry">I'm Feeling Hungry</option>
                             <option value="flip a coin">I'm Feeling Adventurous</option>
