--- a/search.html
+++ b/search.html
@@ -30,6 +30,10 @@
                     <div>
                         <label for="checkwindow">Open Links in New Window?</label>
                         <input type="checkbox" name="newwindow" value="1" id="checkwindow">
+                        <label for="images">Images Only?</label>
+                        <input type="checkbox" name="tbm" value="isch" id="images">
+                        <label for="videos">Videos Only?</label>
+                        <input type="checkbox" name="tbm" value="vid" id="videos">
                     </div>
                     <div>
                         <label for="random">Random Search</label>
@@ -37,6 +41,7 @@
                             <option value="I'm Feeling Curious">I'm Feeling Curious</option>
                             <option value="I'm Feeling Hungry">I'm Feeling Hungry</option>
                             <option value="flip a coin">I'm Feeling Adventurous</option>
+                            <option value="doodles">I'm Feeling Doodley</option>
                         </select>
                     </div>
                 </fieldset>
