--- a/search.html
+++ b/search.html
@@ -42,6 +42,7 @@
                             <option value="I'm Feeling Hungry">I'm Feeling Hungry</option>
                             <option value="flip a coin">I'm Feeling Adventurous</option>
                             <option value="doodles">I'm Feeling Doodley</option>
+                            <option value="">--None--</option>
                         </select>
                     </div>
                 </fieldset>
