--- a/search.html
+++ b/search.html
@@ -13,7 +13,7 @@
             <fieldset style="border: 2px dashed darkred;" id="toplevelset">
                 <div>
                     <label for="searchbox" style="font-size: 16px;">Super Search String:</label>
-                    <input type="text" name="q" id="searchbox" placeholder="Enter your search query">
+                    <input type="text" name="q" id="searchbox" placeholder="Enter your search query"><br><br>
                     <label for="exclude" style="font-size:16px;">Anything you want to exclude from search?</label>
                     <input type="text" name="as_eq" id="exclude" placeholder="Query you want to exclude"><br><br>
                 </div>
