--- a/search.html
+++ b/search.html
@@ -37,11 +37,11 @@
                         <label for="videos">Videos Only?</label>
                         <input type="checkbox" name="tbm" value="vid" id="videos">
                         <label for="pdf">PDF Results?</label>
-                        <input type="checkbox" name="as_filetype=extension" value="filetpye: pdf" id="pdf">
+                        <input type="checkbox" name="as_filetype=extension" value="filetpye: pdf" id="pdf"><br><br>
                     </div>
                     <div>
-                        <label for="random">Random Search</label>
-                        <p style="font-size: 10pz;">Note: Don't enter anything in search bar or select certain site for this funtion to work!</p>
+                        <label for="random" style="font-size: 12px;">Random Search</label>
+                        <p style="font-size: 10px;">Note: Don't enter anything in search bar or select certain site for this funtion to work!</p>
                         <select name="as_q" id="random">
                             <option value="I'm Feeling Curious">I'm Feeling Curious</option>
                             <option value="I'm Feeling Hungry">I'm Feeling Hungry</option>
