--- a/search.html
+++ b/search.html
@@ -15,7 +15,7 @@
                     <label for="searchbox" style="font-size: 16px;">Super Search String:</label>
                     <input type="text" name="q" id="searchbox" placeholder="Enter your search query"><br><br>
                     <label for="exclude" style="font-size:16px;">Anything you want to exclude from search?</label>
-                    <input type="text" name="as_eq" id="exclude" placeholder="Query you want to exclude"><br><br>
+                    <input type="text" name="as_eq" value="-" id="exclude" placeholder="Query you want to exclude"><br><br>
                 </div>
                 <div>
                     <label for="site" style="font-size: 16px;">Search in Specific Site
