--- a/search.html
+++ b/search.html
@@ -50,6 +50,8 @@
                             <option value="">--None--</option>
                         </select>
                     </div>
+                    <div>
+                        <input type="submit" value="Done">
                 </fieldset>
             </fieldset>
         </form>
