--- a/search.html
+++ b/search.html
@@ -40,8 +40,7 @@
                         <input type="checkbox" name="as_filetype" value="pdf" id="pdf"><br><br>
                     </div>
                     <div>
-                        <label for="random" style="font-size: 12px;">Random Search</label>
-                        <p style="font-size: 10px;">Note: Don't enter anything in search bar or select certain site for this funtion to work!</p>
+                        <label for="random" style="font-size: 12px;">Random Search: Don't enter anything in search bar or select certain site for this funtion to work!</label>
                         <select name="as_q" id="random">
                             <option value="">--None--</option>
                             <option value="I'm Feeling Curious">I'm Feeling Curious</option>
@@ -49,9 +48,9 @@
                             <option value="flip a coin">I'm Feeling Adventurous</option>
                             <option value="doodles">I'm Feeling Doodley</option>
                         </select>
-                    </div>
+                    </div><br><br>
                     <div>
-                        <input type="submit" value="Done">
+                        <input type="submit" value="Done" style="size: 50px;>
                 </fieldset>
             </fieldset>
         </form>
