--- a/search.html
+++ b/search.html
@@ -48,9 +48,9 @@
                             <option value="flip a coin">I'm Feeling Adventurous</option>
                             <option value="doodles">I'm Feeling Doodley</option>
                         </select>
-                    </div><br><br>
+                    </div><br>
                     <div>
-                        <input type="submit" value="Done" style="size: 50px;>
+                        <input type="submit" value="Done">
                 </fieldset>
             </fieldset>
         </form>
