--- a/search.html
+++ b/search.html
@@ -51,6 +51,7 @@
                     </div><br>
                     <div>
                         <input type="submit" value="Done">
+                    </div>
                 </fieldset>
             </fieldset>
         </form>
