--- a/search.html
+++ b/search.html
@@ -18,7 +18,7 @@
                     <input type="text" name="as_eq" id="exclude" placeholder="Query you want to exclude"><br><br>
                 </div>
                 <div>
-                    <label for="site" style="font-size: 16px;">Search in Specific Site
+                    <label for="site" style="font-size: 16px;">Search in Specific Site</label>
                     <select name="as_sitesearch" id="site">
                         <option value="">--All Sites--</option>
                         <option value="unco.edu">University of Northern Colorado</option>
@@ -28,7 +28,7 @@
                     </select>
                 </div>
 
-                <fieldset style="border: none;" id="toplevelset">
+                <fieldset style="border: none;">
                     <div>
                         <label for="checkwindow">Open Links in New Window?</label>
                         <input type="checkbox" name="newwindow" value="1" id="checkwindow">
