--- a/search.html
+++ b/search.html
@@ -38,8 +38,8 @@
                         <input type="checkbox" name="tbm" value="vid" id="videos">
                         <label for="pdf">PDF Results?</label>
                         <input type="checkbox" name="as_filetype" value="pdf" id="pdf">
-                        <label for="doc">Doc Results?</label>
-                        <input type="checkbox" name="as_filetype" value="doc" id="doc"><br><br>
+                        <label for="ppt">Power Point Results?</label>
+                        <input type="checkbox" name="as_filetype" value="ppt" id="ppt"><br><br>
                     </div>
                     <div>
                         <label for="random" style="font-size: 12px;">Random Search: Don't enter anything in search bar or select certain site for this funtion to work!</label>
