--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="educate.html"><strong>Educate</strong></a>: A page of inspirational and educational Ted Talks!</li>
             <li><a href="inspire.html"><strong>Inspire</strong></a>: A page dedicated to someone who inspires my work.</li>
             <li><a href="profile.html"><strong>Profile</strong></a>: An introduction of me and my special interest!</li>
+            <li><a href="search.html"><strong>Super Search</strong></a>: A page simular to google, but super!</li>
             <li><a href="superhero.html"><strong>Superheroes</strong></a>: A page dedicated to my favorite superheroes!</li>
           </ol>
           <img src="images/UNCOLogo.png" alt="UNCO Bear Logo">
