--- a/resume/index.html
+++ b/resume/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial scale=1">
         <title>Resume</title>
     </head>
     <body>
@@ -14,6 +14,14 @@
                 <a href="index.html#education">Education</a>
                 <a href="index.html#experience">Experience</a>
                 <a href="index.html#skills">Skills</a>
-        </nav>
+        </nav><br><br>
+        <section id="contactinfo">
+            <h2>Contact Information</h2>
+            <ol type="I">
+                <li>Phone:</li>
+                <li>Email:</li>
+                <li>Social Media:</li>
+            </ul>
+        </section>
     </body>
 </html>
