--- a/resume/index.html
+++ b/resume/index.html
@@ -15,13 +15,16 @@
                 <a href="index.html#experience">Experience</a>
                 <a href="index.html#skills">Skills</a>
         </nav><br><br>
-        <section id="contactinfo">
+        <div class="division"><section id="contactinfo">
             <h2>Contact Information</h2>
-            <ol type="I">
-                <li>Phone:</li>
-                <li>Email:</li>
-                <li>Social Media:</li>
+            <ul type="circle">
+                <li>Phone: 303*******</li>
+                <li>Email: long3016@bears.unco.edu</li>
+                <li>Social Media: @beannie.sprout</li>
             </ul>
-        </section>
+        </section></div>
+        <div class="division"><section>
+
+        </section></div>
     </body>
 </html>
