--- a/resume/index.html
+++ b/resume/index.html
@@ -10,10 +10,10 @@
             <img src="Profile.png" alt="profile" style="height: 150px; width: auto; margin: auto; display: block;">
             <h1 style = "text-align: center;">Welcome to Payton's Resume</h1>
             <p style="text-align: center;">Navigate through various experiences and works by Payton Long!</p>
-                <a href="index.html#contactinfo">Contact Information</a>
+                <p style= "text-align: center;"><a href="index.html#contactinfo">Contact Information</a>
                 <a href="index.html#education">Education</a>
                 <a href="index.html#experience">Experience</a>
-                <a href="index.html#skills">Skills</a>
+                <a href="index.html#skills">Skills</a></p>
         </nav><br><br>
         <div class="division"><section id="contactinfo">
             <h2>Contact Information</h2>
