--- a/resume/index.html
+++ b/resume/index.html
@@ -20,11 +20,10 @@
             <ul type="circle">
                 <li>Phone: 303*******</li>
                 <li>Email: long3016@bears.unco.edu</li>
-                <li>Social Media: @beannie.sprout</li>
             </ul>
         </section></div>
         <div class="division"><section>
-
+            <h2>Social Media</h2>
         </section></div>
     </body>
 </html>
