--- a/resume/index.html
+++ b/resume/index.html
@@ -22,7 +22,7 @@
                 <li>Email: long3016@bears.unco.edu</li>
             </ul>
         </section></div>
-        <div><section>
+        <div><section id="socials">
             <h2>Social Media</h2>
         </section></div>
     </body>
