--- a/resume/index.html
+++ b/resume/index.html
@@ -15,15 +15,15 @@
                 <a href="index.html#experience">Experience</a>
                 <a href="index.html#skills">Skills</a></p>
         </nav><br><br>
-        <div float="left"><section id="contactinfo">
+        <section id="contactinfo">
             <h2>Contact Information</h2>
             <ul type="circle">
                 <li>Phone: 303*******</li>
                 <li>Email: long3016@bears.unco.edu</li>
             </ul>
-        </section></div>
-        <div><section id="socials">
+        </section>
+        <section id="socials">
             <h2>Social Media</h2>
-        </section></div>
+        </section>
     </body>
 </html>
